Fixing dark mode bugs, adding darker box shadow

--- a/src/components/FloatingCard.scss
+++ b/src/components/FloatingCard.scss
@@ -118,7 +118,6 @@
     padding: 1rem 0;
   
     border-radius: 0 0 $border-radius $border-radius;
-    box-shadow: 0 0 0 #fff;
   
     transition: none $transition-time $transition-timing;
     transition-property: padding, box-shadow;
