--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -102,7 +102,7 @@
         margin: 0 auto;
         padding: 0.25rem 1rem;
         border-radius: 0 0 $border-radius $border-radius;
-        box-shadow: 0 3px 3px rgba(55, 55, 55, 0.5);;
+        box-shadow: getColor(box-shadow);
       }
 
       button {
