--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,10 +12,10 @@ $colors: (
 $colors-dark: (
 	base: #121212,
 	highlight: #222,
-	off-white: #0c0c0c,
+	off-white: #181818,
 	text-color: #e9e9e9,
 	subheading-text: #f5f5f5,
-	box-shadow: None
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5)
 );
 //converting scss variable into css variable
 :root {
